input box and send button aligned correctly

--- a/public/chat.css
+++ b/public/chat.css
@@ -1,22 +1,22 @@
 #chat { 
-	   padding-top:65px;
+	   margin-top:60px;
 	   padding-left:0px;
 	   display:inline;
 	   width: 80%;
-	   height: 95vh;
+	   height: 86vh;
 	   float: left;
        overflow:auto;
 	}
 
 #rosterDiv { 
+		 margin-top:60px;
 	   display:block;
 	   bottom: -20px;
 	   width: 19%;
 	   float: right;
-	   height: 90vh;
+	   height: 80vh;
 	   overflow:auto;
 	   position:relative;
-	   padding-top: 65px;
 	}	
 	
 	
@@ -44,9 +44,15 @@ section {
 }
 
 .textInput{
-	width:70%;
-	padding-left:20px !important;
-	height:20px
+	width:64%;
+	margin-left:95px;
+	height:15px;
+	color: #555555;
+	position:relative;
+  vertical-align: middle;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
 }
 
 #clouds{
@@ -61,8 +67,8 @@ section {
 }
 
 #send {
-	height: 20px;
-	padding-bottom:20px;
+	height: 22px;
+	position:relative;
 	text-align:center;
 }
 
